# kuka_gazebo

./: CMakeLists.txt  README.md  package.xml
kuka_kr6_r900sixx/config/: position_controllers.yaml
kuka_kr6_r900sixx/config/joint_position_control/: position_controllers.yaml
kuka_kr6_r900sixx/launch/: gazebo_load.launch  gazebo_load_joint_position_control.xml  gazebo_load_joint_position_effort_control.xml  joint_position_control.launch  joint_position_control.xml  joint_position_effort_control.xml
kuka_kr6_r900sixx/urdf/: kr6r900sixx.xacro  kr6r900sixx_macro.xacro  kuka_kr6r900sixx.xacro
kuka_kr6_r900sixx/urdf/joint_position_control/: kuka_kr6r900sixx.xacro  kuka_kr6r900sixx_macro.xacro
kuka_kr6_r900sixx/urdf/joint_position_effort_control/: kuka_kr6r900sixx.xacro  kuka_kr6r900sixx_macro.xacro
launch/: kr6_r900sixx_gazebo_joint_control.launch  kr6_r900sixx_gazebo_joint_position_control.launch  kr6_r900sixx_gazebo_joint_position_effort_control.launch
