<?xml version="1.0"?>
<package format="2">
  <name>kuka_gazebo</name>
  <version>1.0.0</version>
  <description>
    <p>
      Contains configuration- and launch files for running simulations of the Kuka KR6 R900 sixx within Gazebo.
    </p>
    <p>
      The robot can be actuated within Gazebo by sending joint_a1, joint_a2, ..., joint_a6 setpoints via the topics /joint_a{n}_position_controller/command
    </p>
    <p>
      This package is inspired by work conducted by Sebastian Nagel, which in turn is based on work by Mark Culleton and Kevin Kelly.
      https://github.com/SebNag/kuka_kr6r900sixx_moveit_gazebo_setup
      https://github.com/ros-industrial/abb_experimental
    </p>
  </description>
  
  <author email="aleksander.skrede@gmail.com">Aleksander Skrede</author>
  <maintainer email="aleksander.skrede@gmail.com">Aleksander Skrede</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>kuka_kr6_support</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
